@@ -894,7 +894,7 @@ public final class PropertySetMixin {
                         isDefaulted, wrapOptional));
                 UnoRuntime.queryInterface(
                     XIdlField2.class, type.getField("IsAmbiguous")).set(
-                        strct, new Boolean(isAmbiguous));
+                        strct, Boolean.valueOf(isAmbiguous));
             } catch (com.sun.star.lang.IllegalArgumentException e) {
                 throw new RuntimeException(
                     "unexpected com.sun.star.lang.IllegalArgumentException: "
@@ -921,7 +921,7 @@ public final class PropertySetMixin {
                         false, false, wrapOptional));
                 UnoRuntime.queryInterface(
                     XIdlField2.class, type.getField("IsDefaulted")).set(
-                        strct, new Boolean(isDefaulted));
+                        strct, Boolean.valueOf(isDefaulted));
             } catch (com.sun.star.lang.IllegalArgumentException e) {
                 throw new RuntimeException(
                     "unexpected com.sun.star.lang.IllegalArgumentException: "
@@ -941,7 +941,7 @@ public final class PropertySetMixin {
             try {
                 UnoRuntime.queryInterface(
                     XIdlField2.class, type.getField("IsPresent")).set(
-                        strct, new Boolean(present));
+                        strct, Boolean.valueOf(present));
                 if (present) {
                     XIdlField2 field = UnoRuntime.queryInterface(
                         XIdlField2.class, type.getField("Value"));
