@@ -80,7 +80,7 @@ public class TestHelper  {
         try
         {
             xPropSet.setPropertyValue( "MediaType", sMediaType );
-            xPropSet.setPropertyValue( "Compressed", new Boolean( bCompressed ) );
+            xPropSet.setPropertyValue( "Compressed", Boolean.valueOf( bCompressed ) );
         }
         catch( Exception e )
         {
@@ -208,7 +208,7 @@ public class TestHelper  {
         // set properties to the stream
         try
         {
-            xPropSet.setPropertyValue( "Encrypted", new Boolean( bEncrypted ) );
+            xPropSet.setPropertyValue( "Encrypted", Boolean.valueOf( bEncrypted ) );
         }
         catch( Exception e )
         {
@@ -711,7 +711,7 @@ public class TestHelper  {
         {
             try
             {
-                xTempFileProps.setPropertyValue( "RemoveFile", new Boolean( false ) );
+                xTempFileProps.setPropertyValue( "RemoveFile", Boolean.FALSE );
                 sResult = AnyConverter.toString( xTempFileProps.getPropertyValue( "Uri" ) );
             }
             catch( Exception e )
