@@ -88,7 +88,7 @@ public class TestHelper  {
         try
         {
             xPropSet.setPropertyValue( "MediaType", sMediaType );
-            xPropSet.setPropertyValue( "Compressed", new Boolean( bCompressed ) );
+            xPropSet.setPropertyValue( "Compressed", Boolean.valueOf( bCompressed ) );
         }
         catch( Exception e )
         {
@@ -736,7 +736,7 @@ public class TestHelper  {
         {
             try
             {
-                xTempFileProps.setPropertyValue( "RemoveFile", new Boolean( false ) );
+                xTempFileProps.setPropertyValue( "RemoveFile", Boolean.FALSE );
                 sResult = AnyConverter.toString( xTempFileProps.getPropertyValue( "Uri" ) );
             }
             catch( Exception e )
