@@ -92,7 +92,7 @@ public class _XPagePrintable extends MultiMethodTest {
         boolean res = true;
 
         Boolean landscape = (Boolean) PrintSettings[8].Value;
-        Boolean newlandscape = new Boolean(!landscape.booleanValue());
+        Boolean newlandscape = Boolean.valueOf(!landscape.booleanValue());
         PrintSettings[8].Value = newlandscape;
         oObj.setPagePrintSettings(PrintSettings);
         res = (oObj.getPagePrintSettings()[8].Value.equals(newlandscape));
